# ai-maker-space

./: .gitignore  LICENSE  MERGE.md  README.md  SYSTEM_DESIGN_INTERVIEW.md  package-lock.json  pyproject.toml  test-deployment.sh  vercel.json
.cursor/rules/: branch-rule.mdc  venv-rule.mdc
api/: __init__.py  app.py  requirements.txt  temp.py  vercel.json
app/: hello_world.ipynb
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  Login.css  Login.tsx  auth.ts  index.css  users.ts
system_design_pdfs/: README.md
