[project]
name = "ai-maker-space-api"
version = "0.1.0"
description = "AI Maker Space - FastAPI Backend for OpenAI Chat"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["api"]
include = ["*"]
exclude = ["frontend*", "node_modules*", "*.tests*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]
